jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    application: jenkins
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: slave
    port: 50000
    targetPort: 50000
    protocol: TCP
  selector:
    application: jenkins
status:
  loadBalancer: {}
